modules/cli/src/test/resources/bad/disamb/imports/Import02.scr
module bad.disamb.imports.Import02;


import bad.disamb.imports.Import02;
